--- a/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
@@ -28,6 +28,8 @@
 							oncomplete="PF('doacaoDialog').show()">
 							<f:setPropertyActionListener value="#{doacao}"
 								target="#{consultaDoacoesView.selectedDoacao}" />
+							<f:setPropertyActionListener value="#{doacao}"
+								target="#{editarDoacao.doacao}" />
 							<p:graphicImage value="#{doacaoImagem.imagem}" style="width:100%">
 								<f:param name="doacaoId" value="#{doacao.id}" />
 							</p:graphicImage>
@@ -38,6 +40,8 @@
 							oncomplete="PF('doacaoDialog').show()">
 							<f:setPropertyActionListener value="#{doacao}"
 								target="#{consultaDoacoesView.selectedDoacao}" />
+							<f:setPropertyActionListener value="#{doacao}"
+								target="#{editarDoacao.doacao}" />
 						</p:commandButton>
 
 
@@ -76,13 +80,13 @@
 						<h:outputText
 							value="#{consultaDoacoesView.selectedDoacao.periodoString}"
 							style="font-weight: bold" />
-
 						<h:outputText value="Cidade:  " />
+
 						<h:outputText
 							value="#{consultaDoacoesView.selectedDoacao.voluntarioEntity.cidade}"
 							style="font-weight: bold" />
 
-						<p:button value="Editar" outcome="editarDoacao.xhtml"
+						<p:button value="Tenho Interesse!" icon="ui-icon-like"
 							disabled="#{!(consultaDoacoesView.botaoEditar)}">
 						</p:button>
 
