--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -35,7 +35,7 @@
 							</p:graphicImage>
 						</p:commandLink>
 
-						<p:commandButton update=":form:eventoDetail"
+						<p:commandButton value="Mais Informações" update=":form:eventoDetail"
 							action="#{consultaEventosView.ativarBotoes}"
 							oncomplete="PF('eventoDialog').show()">
 							<f:setPropertyActionListener value="#{evento}"
