Editar dados. ok

--- a/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
@@ -35,7 +35,7 @@
 							</p:graphicImage>
 						</p:commandLink>
 
-						<p:commandButton update=":form:doacaoDetail"
+						<p:commandButton value="Mais Informações" update=":form:doacaoDetail"
 							action="#{consultaDoacoesView.ativarBotoes}"
 							oncomplete="PF('doacaoDialog').show()">
 							<f:setPropertyActionListener value="#{doacao}"
