--- a/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
@@ -35,7 +35,8 @@
 							</p:graphicImage>
 						</p:commandLink>
 
-						<p:commandButton value="Mais Informações" update=":form:doacaoDetail"
+						<p:commandButton value="Mais Informações"
+							update=":form:doacaoDetail"
 							action="#{consultaDoacoesView.ativarBotoes}"
 							oncomplete="PF('doacaoDialog').show()">
 							<f:setPropertyActionListener value="#{doacao}"
@@ -86,9 +87,10 @@
 							value="#{consultaDoacoesView.selectedDoacao.voluntarioEntity.cidade}"
 							style="font-weight: bold" />
 
-						<p:button value="Tenho Interesse!" icon="ui-icon-like"
-							disabled="#{!(consultaDoacoesView.botaoEditar)}">
-						</p:button>
+
+						<p:commandButton value="Tenho Interesse!"
+							id="commandButton-salvar" icon="ui-icon-like"
+							action="#{consultaDoacoesView.enviarEmailInteresse}" ajax="false" />
 
 					</p:panelGrid>
 				</p:outputPanel>
