--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -107,9 +107,9 @@
 							value="#{consultaVagasView.selectedVaga.ongEntity.nomeONG}"
 							style="font-weight: bold" />
 
-						<p:button value="Editar" outcome="editarVaga.xhtml"
-							disabled="#{!(consultaVagasView.botaoEditar)}">
-						</p:button>
+						<p:commandButton value="Tenho Interesse!"
+							id="commandButton-salvar" icon="ui-icon-like"
+							action="#{consultaVagasView.enviarEmailInteresse}" ajax="false" />
 
 					</p:panelGrid>
 				</p:outputPanel>
