--- a/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarDoacoes.xhtml
@@ -90,11 +90,18 @@
 
 						<p:commandButton value="Tenho Interesse!"
 							id="commandButton-salvar" icon="ui-icon-like"
-							action="#{consultaDoacoesView.enviarEmailInteresse}" ajax="false" />
+							action="#{consultaDoacoesView.enviarEmailInteresse}" />
 
 					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
+			
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+						severity="warn" />
+					<p:messages autoUpdate="true" closable="true" severity="error" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true"
+						severity="info" />
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
