--- a/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
@@ -92,6 +92,13 @@
 					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
+			
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+						severity="warn" />
+					<p:messages autoUpdate="true" closable="true" severity="error" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true"
+						severity="info" />
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
