--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -35,7 +35,8 @@
 							</p:graphicImage>
 						</p:commandLink>
 
-						<p:commandButton value="Mais Informações" update=":form:eventoDetail"
+						<p:commandButton value="Mais Informações"
+							update=":form:eventoDetail"
 							action="#{consultaEventosView.ativarBotoes}"
 							oncomplete="PF('eventoDialog').show()">
 							<f:setPropertyActionListener value="#{evento}"
@@ -90,10 +91,19 @@
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
-					</p:panelGrid>
-				</p:outputPanel>
-			</p:dialog>
+						<p:messages showDetail="true" autoUpdate="true" closable="true"
+							severity="warn" />
+						<p:messages autoUpdate="true" closable="true" severity="error" />
+						<p:messages showDetail="true" autoUpdate="true" closable="true"
+							severity="info" />
 		</h:form>
+
+		</p:tab>
+
+		</p:tabView>
+
 	</ui:define>
+
 </ui:composition>
+
 </html>
