--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -109,11 +109,18 @@
 
 						<p:commandButton value="Tenho Interesse!"
 							id="commandButton-salvar" icon="ui-icon-like"
-							action="#{consultaVagasView.enviarEmailInteresse}" ajax="false" />
+							action="#{consultaVagasView.enviarEmailInteresse}" />
 
 					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
+
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+				severity="warn" />
+			<p:messages autoUpdate="true" closable="true" severity="error" />
+			<p:messages showDetail="true" autoUpdate="true" closable="true"
+				severity="info" />
+
 		</h:form>
 	</ui:define>
 </ui:composition>
