Adicionando validação de email

--- a/src/main/webapp/cadastrarONG.xhtml
+++ b/src/main/webapp/cadastrarONG.xhtml
@@ -61,7 +61,9 @@
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80" value="#{ongController.ongModel.email}"
 							required="true"
-							requiredMessage="O email é de preenchimento obrigatório" />
+							requiredMessage="O email é de preenchimento obrigatório" >
+							<f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+						</p:inputText>
 
 						<p:outputLabel value="Telefone" for="inputText-telefone" />
 						<p:inputMask id="inputText-telefone" style="width:100%"
