--- a/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarEvento.xhtml
@@ -55,7 +55,9 @@
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80" value="#{eventoController.eventoModel.email}"
 							required="true"
-							requiredMessage="O campo email é de preenchimento obrigatório" />
+							requiredMessage="O campo email é de preenchimento obrigatório" >
+							<f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+						</p:inputText>
 
 						<p:outputLabel value="Banner do evento" for="foto" />
 						<p:fileUpload id="foto" mode="simple"
