editar foto voluntario

--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -126,6 +126,12 @@
 								requiredMessage="O campo estado é de preenchimento obrigatório" />
 						</p:inplace>
 
+					<p:separator />
+						<br />
+
+						<p:outputLabel value="Foto de Perfil" for="foto" />
+						<p:fileUpload id="foto" mode="simple"
+							value="#{editarVoluntario.uploadedFile}" />
 						<p:separator />
 						<br />
 
