editar banner evento

--- a/src/main/webapp/sistema/ONG/editarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/editarEvento.xhtml
@@ -74,7 +74,7 @@
 						<p:outputLabel value="Banner do evento" for="foto" />
 
 						<p:fileUpload id="foto" mode="simple"
-							value="#{eventoController.uploadedFile}" />
+							value="#{editarEvento.uploadedFile}" />
 
 						<p:outputLabel value="Causas" />
 
