editar foto doacao

--- a/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
@@ -42,7 +42,7 @@
 
 						<p:outputLabel value="Foto do objeto para doação" for="foto" />
 						<p:fileUpload id="foto" mode="simple"
-							value="#{doacaoController.uploadedFile}" />
+							value="#{editarDoacao.uploadedFile}" />
 
 						<p:outputLabel value="Disponibilidade para retirada:" />
 						<p:selectManyCheckbox id="dias"
