--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -86,9 +86,9 @@
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80"
 							value="#{voluntarioController.voluntarioModel.email}"
-							required="true"
+							required="true"  validatorMessage="Email incorreto"
 							requiredMessage="O campo email é de preenchimento obrigatório">
-							<f:validateRegex
+							<f:validateRegex 
 								pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 						</p:inputText>
 
